maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:10: error: not found: value getMondeLongueur
  var H=getMondeLongueur()
        ^